# smart-crypto-trader-python

./: .gitignore  main.md
smart-crypto-trader/: README.md  pyproject.toml
smart-crypto-trader-project-1/: README.md  pyproject.toml
smart-crypto-trader-project-1/src/: __init__.py  test1.py
smart-crypto-trader/src/smart_crypto_trader/: script.py  script1.py  sript.py
